# zephyr-midi1

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.rst  west.yml
drivers/midi/clock/: CMakeLists.txt  Kconfig  README.rst  midi1_clock_cntr.c
drivers/midi/common/: CMakeLists.txt  midi1.c
drivers/midi/measurement/: CMakeLists.txt  Kconfig  README.rst  midi1_blockavg.c  midi1_clock_meas_cntr.c
lib/harmonic/: CMakeLists.txt  Kconfig  harmonic.c  note.c
samples/: README.md  README.rst
samples/chord_display/: CMakeLists.txt  README.rst  prj.conf
samples/harmonic_chord_detection/: CMakeLists.txt  prj.conf
samples/harmonic_chord_gen/: CMakeLists.txt  prj.conf
samples/harmonic_midi_reactive/: CMakeLists.txt  README.rst  prj.conf
samples/midi1_arp/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/midi1_arp_phase_shift/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/midi1_clock_generator/: CMakeLists.txt  LICENSE  README.md  README.rst  prj.conf  sample.yaml
samples/midi1_clock_measurement/: CMakeLists.txt  README.md  README.rst  prj.conf  sample.yaml
samples/midi1_hybrid_test/: CMakeLists.txt  prj.conf
samples/midi1_joystick/: CMakeLists.txt  README.rst  prj.conf
samples/midi1_octave_arp/: CMakeLists.txt  README.rst  sample.yaml
samples/midi1_serial/: CMakeLists.txt  README.rst  prj.conf
samples/midi1_super_arp/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/midi1_usb_bridge/: CMakeLists.txt  README.rst  app.overlay  prj.conf
twister-out/: twister.json
zephyr/: module.yml
(+102 files in other folders)
